<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/welcome_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/welcome_message"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@id/guideline3" />

    <TextView
        android:id="@+id/course_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/course_message"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toStartOf="@id/guideline5"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/units_message" />

    <TextView
        android:id="@+id/units_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/units_message"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/welcome_msg" />

    <EditText
        android:id="@+id/edit_course_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/course_hint"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toStartOf="@id/guideline5"
        app:layout_constraintTop_toTopOf="@id/edit_unit_1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="90dp" />

    <EditText
        android:id="@+id/edit_unit_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/unit_hint"
        android:inputType="number"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/units_message"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="94dp" />

    <EditText
        android:id="@+id/edit_course_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/course_hint"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toStartOf="@id/guideline5"
        app:layout_constraintTop_toTopOf="@id/edit_unit_2"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="167dp" />

    <EditText
        android:id="@+id/edit_unit_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/unit_hint"
        android:inputType="number"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/edit_unit_1"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="200dp" />

    <EditText
        android:id="@+id/edit_course_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/course_hint"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="@id/edit_unit_3"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toStartOf="@id/guideline5"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="211dp" />

    <EditText
        android:id="@+id/edit_unit_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/unit_hint"
        android:inputType="number"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/edit_unit_2"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="222dp" />

    <EditText
        android:id="@+id/edit_course_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/course_hint"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="@id/edit_unit_4"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toStartOf="@id/guideline5"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="250dp" />

    <EditText
        android:id="@+id/edit_unit_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/unit_hint"
        android:inputType="number"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/edit_unit_3"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="299dp" />

    <EditText
        android:id="@+id/edit_course_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/course_hint"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="@id/edit_unit_5"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toStartOf="@id/guideline5"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="317dp" />

    <EditText
        android:id="@+id/edit_unit_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/unit_hint"
        android:inputType="number"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/edit_unit_4"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="354dp" />

    <EditText
        android:id="@+id/edit_course_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/course_hint"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="@id/edit_unit_6"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toStartOf="@id/guideline5"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="354dp" />

    <EditText
        android:id="@+id/edit_unit_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/unit_hint"
        android:inputType="number"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/edit_unit_5"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        tools:layout_editor_absoluteX="177dp"
        tools:layout_editor_absoluteY="429dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/grade_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/grade_message"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="@id/units_message"
        tools:text="@string/grade_message" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <EditText
        android:id="@+id/edit_grade_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/grade_hint"
        android:inputType="textCapCharacters"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="@id/edit_unit_1" />

    <EditText
        android:id="@+id/edit_course_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/course_hint"
        app:layout_constraintEnd_toStartOf="@id/guideline5"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/edit_unit_7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <EditText
        android:id="@+id/edit_grade_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapCharacters"
        app:layout_constraintTop_toTopOf="@id/edit_unit_2"
        app:layout_constraintStart_toEndOf="@id/guideline4"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        android:hint="@string/grade_hint"
        tools:layout_editor_absoluteX="219dp"
        tools:layout_editor_absoluteY="147dp" />

    <EditText
        android:id="@+id/edit_grade_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapCharacters"
        android:hint="@string/grade_hint"
        app:layout_constraintTop_toTopOf="@id/edit_unit_3"
        app:layout_constraintStart_toEndOf="@id/guideline4"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        tools:layout_editor_absoluteX="263dp"
        tools:layout_editor_absoluteY="220dp" />

    <EditText
        android:id="@+id/edit_grade_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapCharacters"
        android:hint="@string/grade_hint"
        app:layout_constraintTop_toTopOf="@id/edit_unit_4"
        app:layout_constraintStart_toEndOf="@id/guideline4"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        tools:layout_editor_absoluteX="253dp"
        tools:layout_editor_absoluteY="254dp" />

    <EditText
        android:id="@+id/edit_grade_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapCharacters"
        android:hint="@string/grade_hint"
        app:layout_constraintTop_toTopOf="@id/edit_unit_5"
        app:layout_constraintStart_toEndOf="@id/guideline4"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        tools:layout_editor_absoluteX="262dp"
        tools:layout_editor_absoluteY="313dp" />

    <EditText
        android:id="@+id/edit_grade_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapCharacters"
        android:hint="@string/grade_hint"
        app:layout_constraintTop_toTopOf="@id/edit_unit_6"
        app:layout_constraintStart_toEndOf="@id/guideline4"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        tools:layout_editor_absoluteX="240dp"
        tools:layout_editor_absoluteY="374dp" />

    <EditText
        android:id="@+id/edit_unit_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/unit_hint"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/edit_unit_6"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="445dp" />

    <EditText
        android:id="@+id/edit_grade_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapCharacters"
        android:hint="@string/grade_hint"
        app:layout_constraintTop_toTopOf="@id/edit_unit_7"
        app:layout_constraintStart_toEndOf="@id/guideline4"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        tools:layout_editor_absoluteX="281dp"
        tools:layout_editor_absoluteY="445dp" />

    <TextView
        android:id="@+id/tv_gpa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/bt_calc"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/edit_unit_7" />

    <Button
        android:id="@+id/bt_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@id/guideline"
        />


</androidx.constraintlayout.widget.ConstraintLayout>